--- a/src/client/components/Header/styles.css
+++ b/src/client/components/Header/styles.css
@@ -1,3 +1,17 @@
+nav {
+    display: flex;
+    margin-bottom: 3rem;
+}
+nav a {
+    flex-grow: 1;
+    text-align: center;
+    padding: 1rem 0;
+    background-color: #607D8B;
+    color: white;
+    text-transform: uppercase;
+    font-size: 2rem;
+    text-decoration: none;
+}
 .nav_active__link {
-    color: green;
+    background-color: #546E7A;
 }
