--- a/src/client/pages/HomePage/styles.css
+++ b/src/client/pages/HomePage/styles.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-content: flex-start;
 }
 
 .listHotels::-webkit-scrollbar {
