--- a/src/client/pages/HomePage/styles.css
+++ b/src/client/pages/HomePage/styles.css
@@ -59,6 +59,8 @@
 }
 
 .hotelItemCityName {
+    position: absolute;
+    top: 0;
     font-size: 1.2rem;
     padding: 1rem 0 0 1rem;
     color: white;
@@ -68,12 +70,16 @@
     display: block;
     height: 100%;
     text-decoration: none;
-    background-color: gray;
     transition: box-shadow .3s;
 }
 
 .hotelItemLink:hover {
     box-shadow: 0 0 0 0.1rem gray;
+}
+
+.hotelItemImg {
+    width: 100%;
+    height: 100%;
 }
 /* ListHotels end */
 
